--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NoteT3H"
-        tools:targetApi="31">
+        tools:targetApi="34">
         <activity
             android:name=".MainActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
+            android:name=".FirstIntroFrame"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SecondIntroFrame"
+            android:exported="false">
+        </activity>
+
+        <activity
+            android:name=".ThirdIntroFrame"
+            android:exported="false">
+        </activity>
+
+        <activity
+            android:name=".HomeScreen"
+            android:exported="false">
+        </activity>
+
     </application>
 
 </manifest>
