--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
 }
