--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
